--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
-name: ByteFactions
-version: 1.0.0
+name: ${project.artifactId}
+main: ${project.groupId}.${project.artifactId}
+version: ${project.version}
 author: HuliPvP
-main: org.projectbyte.factions.ByteFactions
 description: A Hardcore Factions plugin created by ProjectByte with efficiency in mind.
